--- a/css/style.css
+++ b/css/style.css
@@ -395,6 +395,7 @@ footer .container {
 .btn-primary {
     background-color: #3498db;
     color: white;
+    margin-top: 30px;
 }
 
 .btn-primary:hover {
